--- a/MyWebPortfolio/About.css
+++ b/MyWebPortfolio/About.css
@@ -91,4 +91,22 @@ main section .microsoft .description p{
         object-fit: fill;
         margin-right: 200px;
     }
+    main section#Story {
+        text-align: center;
+    }
+
+    main section#Exp h2 {
+        font-size: 2.5rem;
+    }
+
+    main section .microsoft h1{
+        font-size: 4rem;
+        margin-right: 10px;
+
+    }
+
+    main section .microsoft .description p{
+        margin-top: 0;
+        line-height: 2;
+    }
 }
