--- a/MyWebPortfolio/contact.css
+++ b/MyWebPortfolio/contact.css
@@ -67,17 +67,32 @@
 
 @media (max-width:600px){
     .hero{
+        margin-top: 30px;
         flex-direction: column-reverse;
         gap: 0px;
     }
+    .hero .text{
+        text-align: center;
+    }
     .hero .text h1{
+        text-decoration: underline;
+        font-size: 2.5rem;
         margin-bottom: 10px;
+    }
+    .hero .text p{
+        font-size: 1.5rem;
     }
    
     .hero .images img{
         width: 100%;
     }
 
+    .hero .text .email{
+        margin-bottom: 10px;
+    }
+    .hero .text .number{
+        margin-bottom: 10px;
+    }
    .hero .text .email p{
         font-size:1.5rem;
    }
