--- a/MyWebPortfolio/Projects.css
+++ b/MyWebPortfolio/Projects.css
@@ -42,8 +42,12 @@ main section .projectimagesandtext  p{
 
 
 @media (max-width:600px){
+    main section#ProjectsHero{
+        margin-top: 30px;
+    }
     main section#ProjectsHero  .projectimagesandtext img{
         width: 400px;
+        border-radius: 10px;
     }
 
     main section .projectimagesandtext .googletrans p{
