--- a/MyWebPortfolio/Projects.css
+++ b/MyWebPortfolio/Projects.css
@@ -24,6 +24,7 @@ main section#ProjectsHero  .projectimagesandtext .imgdiv{
     justify-content: center;
     align-items: center;
     border-radius: 20px;
+    margin-bottom: 40px;
 }
 
 main section#ProjectsHero  .projectimagesandtext img{
